--- a/block-ui/block-ui.component.scss
+++ b/block-ui/block-ui.component.scss
@@ -18,8 +18,7 @@
   &__parent {
     @include box-shadow(0 0 9px rgba(0, 0, 0, 0.07));
     @extend .box-child-central;
-    width: 50% !important;
-    max-height: 500px;
+    width: auto !important;
     background-color: none;
     text-align: left;
 
@@ -29,7 +28,7 @@
       width: 100%;
       align-items: center;
       min-height: 4em;
-      padding: 1em;
+      padding: 0 1em;
       -webkit-border-top-left-radius: 8px;
       -webkit-border-top-right-radius: 8px;
       -moz-border-radius-topleft: 8px;
@@ -48,8 +47,9 @@
       &__message {
         width: 100%;
         margin: 0em 1em;
-        font-size: large;
-        font-weight: bold;
+        color: black;
+        font-size: xx-large;
+        font-weight: bolder;
         font-family: $font-family-thai-sarabun;
         text-align: center;
         align-items: center;
@@ -64,12 +64,10 @@
       -moz-border-radius-bottomright: 8px;
       border-bottom-left-radius: 8px;
       border-bottom-right-radius: 8px;
-      padding: 1em;
+      padding: 0 1em;
 
       &__wrap {
         overflow: auto;
-        min-height: 400px;
-        max-height: 500px;
         font-family: $font-family-thai-sarabun;
       }
     }
